--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,20 +2,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #fff; /* Đảm bảo có màu nền để border có thể thấy rõ */
+    border-bottom: 2px solid #ccc;
 }
 
+.navbar-menu li.active a {
+    color: tomato;
+}
+
+.navbar-menu li a:hover {
+    color: tomato;
+}
+
+.navbar-menu li a {
+    color: #49557e;
+    text-decoration: none;
+}
+
+
 .navbar .logo-navbar {
-    width: 15%;
+    width: 150px;
     height: 150px;
     padding: 20px;
 }
 
 .navbar .logo-navbar img {
-    width: 100%;
     height: 100%;
     cursor: pointer;
 }
-
 
 .navbar-menu {
     display: flex;
@@ -37,6 +51,46 @@
     font-size: 33px;
 }
 
+.navbar ul {
+    margin-bottom: 0;
+}
+
+.search-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 250px;
+}
+  
+.search-input {
+    width: 100%;
+    padding: 5px 40px 5px 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 15px;
+    outline: none;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+  
+.search-input:focus {
+    border-color: tomato;
+}
+
+.ic_search {
+    position: absolute;
+    right: 10px;
+    color: #888;
+    cursor: pointer;
+    width: 25px;
+    transition: color 0.3s;
+}
+
+.search-input:focus + .ic_search {
+    color: tomato;  
+}
+  
+
 .navbar button {
     background: transparent;
     font-size: 16px;
@@ -53,8 +107,6 @@
 }
 
 .navbar .active {
-    padding-bottom: 2px;
-    border-bottom: 2px solid tomato;
     color: tomato;
 }
 
@@ -87,15 +139,50 @@
     right: -8px;
 }
 
+.ic_basket {
+    color: black;
+}
+
 @media (max-width:1050px) {
     .navbar .logo-navbar {
         width: 150px;
     }
+    .navbar-menu {
+        gap: 20px;
+        font-size: 17px;
+    }
+    .navbar-right {
+        gap: 30px;
+    }
+    .ic_search, .ic_basket {
+        width: 22px;
+    }
+    .navbar-right button {
+        padding: 8px 25px;
+    }
+}
+
+@media (max-width:900px) {
+    .navbar .logo-navbar {
+        width: 150px;
+    }
+    .navbar-menu {
+        gap: 15px;
+        font-size: 16px;
+    }
+    .navbar-right {
+        gap: 20px;
+    }
+    .ic_search, .ic_basket {
+        width: 20px;
+    }
+    .navbar-right button {
+        padding: 7px 20px;
+    }
 }
 
 @media (max-width:750px) {
-    .navbar .logo-navbar {
-        width: 250px;
-        height: 150px;
+    .navbar-menu {
+        display: none;
     }
 }
