--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,7 @@
 .login {
-    position: absolute;
+    position: fixed;
     z-index: 1;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: #00000090;
@@ -88,6 +89,10 @@
     margin-top: 5px;
 }
 
+.part-end-login p {
+    margin-bottom: 0px;
+}
+
 .part-end-login p span {
     color: tomato;
     font-weight: 500;
@@ -107,3 +112,7 @@
     cursor: pointer;
     color: #666;
   }
+
+.button-login button {
+    width: 100%;
+}
