--- a/src/components/sign_up/Sign_up.css
+++ b/src/components/sign_up/Sign_up.css
@@ -1,15 +1,22 @@
 .sign-up {
-    position: absolute;
+    position: fixed;
     z-index: 1;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #00000090;
     display: grid;
+    place-items: center;
 }
 
 .sign-up-container {
     place-self: center;
     width: max(23vw, 330px);
+    max-height: 90vh;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     color: #808080;
     background-color: white;
     display: flex;
@@ -21,11 +28,19 @@
     animation: fadeIn 0.5s;
 }
 
+.sign-up-container::-webkit-scrollbar {
+    display: none;
+}
+
 .sign-up-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
+}
+
+.sign-up-title h2 {
+    font-size: 25px;
 }
 
 .sign-up-title .icon-closeicon-close {
@@ -43,7 +58,7 @@
 .sign-up-input {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .sign-up-input input {
@@ -68,6 +83,7 @@
 
 .sign-up-container button {
     border: none;
+    width: 100%;
     padding: 10px;
     border-radius: 4px;
     color: white;
