--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -10,7 +10,7 @@
 
 .food-item .food-item-img-container {
     width: 100%;
-    height: 16rem;
+    height: 12rem;
     border-radius: 15px;
     cursor: pointer;
 }
@@ -18,7 +18,14 @@
 .food-item .food-item-img-container img{
     width: 100%;
     height: 100%;
-    padding: 15px;
+    padding: 5px;
+    object-fit: contain;
+    transition: transform 0.3s ease-in-out;
+    display: block;
+}
+
+.food-item .food-item-img-container:hover img{
+    transform: scale(1.1);
 }
 
 .food-item-image {
@@ -70,6 +77,7 @@
     border: 1px solid rgb(255, 255, 255);
     padding: 5px 15px;
     color: white;
+    font-size: 12px;
 }
 
 .button-in-item button:hover{
