--- a/src/page/cart/Cart.css
+++ b/src/page/cart/Cart.css
@@ -1,7 +1,3 @@
-.cart {
-    margin-top: 100px;
-}
-
 .cart-items-titile{
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
@@ -48,12 +44,13 @@
 }
 
 .button-in-cart button {
-    padding: 8px 20px;
+    padding: 8px 25px;
     cursor: pointer;
     background-color: tomato;
     border: 1px solid rgb(255, 255, 255);
     color: white;
     border-radius: 3px;
+    font-size: 13px;
 }
 
 .button-in-cart button:hover {
