--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -24,7 +24,7 @@
     transition: background-color 0.2s ease-in-out;
   }
   
-  .category-list li:hover {
+.category-list li:hover {
     color: tomato;
     font-weight: bold;
   }
@@ -50,19 +50,18 @@
     text-align: center;
 }
 
-
 .product-card img {
     width: 100%;
     height: 150px;
     object-fit: contain;
     padding: 0 5px;
-    transition: transform 0.3s ease-in-out; /* Thêm hiệu ứng chuyển đổi mượt mà */
+    transition: transform 0.3s ease-in-out;
     display: block;
     cursor: pointer;
 }
 
 .product-card:hover img {
-    transform: scale(1.1); /* Phóng to ảnh lên 10% khi hover */
+    transform: scale(1.1);
 }
 
 .product-info {
