--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -2,6 +2,7 @@
     position: fixed;
     z-index: 1;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #00000090;
