--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -10,28 +10,23 @@
 
 .food-item .food-item-img-container {
     width: 100%;
-    height: 12rem;
+    height: 200px;
     border-radius: 15px;
     cursor: pointer;
 }
 
-.food-item .food-item-img-container img{
+.food-item .food-item-img-container .food-item-image{
     width: 100%;
     height: 100%;
-    padding: 5px;
-    object-fit: contain;
+    padding: 6px;
+    border-radius: 15px;
+    object-fit: fill;
     transition: transform 0.3s ease-in-out;
     display: block;
 }
 
 .food-item .food-item-img-container:hover img{
-    transform: scale(1.1);
-}
-
-.food-item-image {
-    width: 100%;
-    border-radius: 15px 15px 0px 0px;
-    align-items: center;
+    transform: scale(1.07);
 }
 
 .food-item-info {
@@ -40,7 +35,7 @@
 
 .food-item-name p{
     max-width: 100%;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
