--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,6 @@
 .login {
   position: fixed;
-  z-index: 1;
+  z-index: 1001;
   top: 0;
   left: 0;
   width: 100%;
@@ -69,7 +69,7 @@
   position: absolute;
 }
 
-.login-container button {
+.login-container .login-button {
   border: none;
   padding: 10px;
   border-radius: 4px;
@@ -122,7 +122,7 @@
   width: 100%;
 }
 
-.button-login button:hover {
+.button-login .login-button:hover {
   background-color: rgb(255, 148, 129);
 }
 
@@ -144,4 +144,14 @@
 
 .part-end-login {
   margin-top: -25px;
+}
+
+.button-google {
+  background: linear-gradient(55deg, #4285F4, #34A853); /* Các màu của Google */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
 }
