--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,9 +1,31 @@
+.blur-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px); /* Mờ nền */
+  background-color: rgba(0, 0, 0, 0.4); /* Overlay màu tối */
+  z-index: 999; /* Lớp trên cùng, thấp hơn navbar */
+}
+
 .navbar {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff; /* Đảm bảo có màu nền để border có thể thấy rõ */
+  background-color: #fff;
   border-bottom: 2px solid #ccc;
+  z-index: 1000;
+  --bs-navbar-padding-y: 0 !important;
+}
+
+.navbar-hidden {
+  z-index: -1; 
 }
 
 .navbar-menu li.active a {
@@ -129,12 +151,14 @@
 
 .navbar .navbar-basket-icon .dot {
   position: absolute;
-  min-width: 10px;
-  min-height: 10px;
+  min-width: 20px;
+  min-height: 15px;
+  color: white;
+  font-size: 0.9em;
   background-color: tomato;
-  border-radius: 5px;
-  top: -7px;
-  right: -8px;
+  border-radius: 50%;
+  top: -8px;
+  left: 30px;
 }
 
 .ic_basket {
@@ -205,7 +229,7 @@ button {
 }
 
 .dropdown-menu .dropdown-item:hover {
-  background-color: tomato;
+  background-color: rgb(255, 155, 137);
   color: #fff;
 }
 
