--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 }
 
 body {
+    padding-top: 150px;
     min-height: 100vh;
     width: 100%;
     overflow-x: hidden;
@@ -27,6 +28,25 @@ a {
     width: 80%;
     margin: auto;
 }
+
+.fade-enter {
+    opacity: 0;
+  }
+  
+  .fade-enter-active {
+    opacity: 1;
+    transition: opacity 300ms;
+  }
+  
+  .fade-exit {
+    opacity: 1;
+  }
+  
+  .fade-exit-active {
+    opacity: 0;
+    transition: opacity 300ms;
+  }
+  
 
 @keyframes fadeIn {
     0%{
