--- a/src/page/cart/Cart.css
+++ b/src/page/cart/Cart.css
@@ -1,64 +1,183 @@
-.cart-items-titile{
-    display: grid;
-    grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
-    align-items: center;
-    color: grey;
-    font-size: max(1vw, 12px);
+.cart-items-titile {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 0.5fr;
+  align-items: center;
+  color: grey;
+  font-size: max(1vw, 12px);
 }
 
 .cart-items-item {
-    margin: 10px 0px;
-    color: black;
+  margin: 10px 0px;
+  color: black;
 }
 
 .cart-items-item img {
-    width: 50px;
+  margin-bottom: 15px;
+  margin-top: -5px;
+  width: 50px;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+}
+
+.cart-items-titile input {
+  width: 45px;
+  border: none;
+}
+
+.total {
+  margin-left: 2px;
+}
+
+.ic_remove {
+  margin-left: 17px;
 }
 
 .cart hr {
-    border: 1px solid #e2e2e2;
+  border: 1px solid #e2e2e2;
 }
 
 .ic_close {
-    cursor: pointer;
-    width: fit-content;
-
+  cursor: pointer;
+  width: fit-content;
 }
 
 .cart-items-item .ic_close:hover {
-    color: tomato;
+  color: tomato;
 }
 
-.cart-items-item .ic_close:active{
-    color: black;
+.cart-items-item .ic_close:active {
+  color: black;
 }
 
 .part-total {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
 }
 
 .button-in-cart {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
 }
 
 .button-in-cart button {
-    padding: 8px 25px;
-    cursor: pointer;
-    background-color: tomato;
-    border: 1px solid rgb(255, 255, 255);
-    color: white;
-    border-radius: 3px;
-    font-size: 13px;
+  padding: 8px 25px;
+  cursor: pointer;
+  background-color: tomato;
+  border: 1px solid rgb(255, 255, 255);
+  color: white;
+  border-radius: 3px;
+  font-size: 13px;
 }
 
 .button-in-cart button:hover {
-    background-color: rgb(255, 168, 152);
+  background-color: rgb(255, 168, 152);
 }
 
 .button-in-cart button:active {
-    background-color: tomato;
+  background-color: tomato;
+}
+
+.cart-items-titile .quantity {
+  margin-left: 18px;
+}
+
+.input-quantity {
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.decrease-quantity {
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  border-radius: 50%;
+  border: 1px solid red;
+  background-color: white;
+}
+
+.decrease-quantity:hover {
+  color: red;
+}
+
+.increase-quantity {
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  border-radius: 50%;
+  border: 1px solid green;
+  background-color: white;
+}
+
+.increase-quantity:hover {
+  color: green;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(108, 106, 106, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background-color: white;
+  padding: 40px;
+  border-radius: 8px;
+  width: 500px;
+  text-align: center;
+}
+
+.popup-content .info-delete {
+    font-weight: 500;
+    color: #333;
+}
+
+.popup-buttons {
+  margin-top: 30px;
+}
+
+.popup-buttons .button-delete {
+  padding: 5px 20px;
+  margin: 5px;
+  border: none;
+  background-color: rgb(234, 0, 0);
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.popup-buttons .button-delete:hover {
+  background-color: #b82525;
+}
+
+.popup-buttons .button-cancel {
+  padding: 5px 20px;
+  margin: 5px;
+  border: none;
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.popup-buttons .button-cancel:hover {
+    background-color: #696969;
+}
+
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
 }
