--- a/src/page/edit_profile/EditProfile.css
+++ b/src/page/edit_profile/EditProfile.css
@@ -17,15 +17,44 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100%3
 }
 
 .edit-profile-avatar {
-  width: 150px;
-  height: 150px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   border: 5px solid rgb(15, 175, 0);
 }
+
+.bg-img {
+  background-color: white;
+  border: 1px solid rgb(15, 175, 0);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: absolute;
+  margin-top: 100px;
+  margin-left: 85px;
+  transition: 0.5s;
+}
+
+.bg-img:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+}
+
+.bg-img input{
+  background-color: red;
+  width: fit-content;
+  height: 50px;
+}
+
+.ic_pen {
+  color: rgb(0, 0, 0);
+  margin-top: 5px;
+  margin-left: 9px;
+} 
 
 .edit-profile-info {
   margin-bottom: 30px;
