--- a/src/page/order_detail/OrderDetail.css
+++ b/src/page/order_detail/OrderDetail.css
@@ -93,3 +93,69 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(108, 106, 106, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background-color: white;
+  padding: 40px;
+  border-radius: 8px;
+  width: 500px;
+  text-align: center;
+}
+
+.popup-content .info-delete {
+    font-weight: 500;
+    color: #333;
+}
+
+.popup-buttons {
+  margin-top: 30px;
+}
+
+.popup-buttons .button-delete {
+  padding: 5px 20px;
+  margin: 5px;
+  border: none;
+  background-color: rgb(234, 0, 0);
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.popup-buttons .button-delete:hover {
+  background-color: #b82525;
+}
+
+.popup-buttons .button-cancel {
+  padding: 5px 20px;
+  margin: 5px;
+  border: none;
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.popup-buttons .button-cancel:hover {
+    background-color: #696969;
+}
+
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
