--- a/src/page/google/Google.css
+++ b/src/page/google/Google.css
@@ -1,19 +1,22 @@
 .confirmation-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center; /* Căn giữa theo chiều ngang */
-  align-items: center; /* Căn giữa theo chiều dọc */
-  height: 70vh; /* Chiều cao của phần tử cha bằng chiều cao của viewport */
-  background-color: white; /* Màu nền của trang */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 .confirmation-box {
+  background-color: white;
+  padding: 40px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
   text-align: center;
-  background-color: #ffffff;
-  padding: 30px 40px;
-  border-radius: 0px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 550px;
-  max-width: 90%;
 }
 
 .info-google {
