--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -8,10 +8,11 @@
     height: 100%;
 }
 
-.image-menu-contents img{
+.image-menu-contents img {
     width: 100%;
     height: 100%;
 }
+
 .food-page-container {
     display: flex;
     max-width: 1200px;
@@ -36,12 +37,12 @@
     cursor: pointer;
     color: #333;
     transition: background-color 0.2s ease-in-out;
-  }
-  
+}
+
 .category-list li:hover {
     color: tomato;
     font-weight: bold;
-  }
+}
 
 .category-list li:active {
     background-color: tomato;
@@ -51,17 +52,27 @@
 .food-grid {
     display: flex;
     flex-wrap: wrap;
+    gap: 20px;
     justify-content: flex-start;
+    align-items: flex-start;
     border-left: 2px solid #ddd;
     padding: 0 20px;
+     margin-bottom: 1000px;
 }
 
 .food-card {
-    margin: 10px 10px;
+    /* flex: 1 1 calc(25% - 20px);  */
+    margin: 0;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
     text-align: center;
+    background-color: #fff;
+    box-sizing: border-box;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .food-card img {
@@ -81,6 +92,16 @@
 .food-info {
     padding: 10px;
     text-align: start;
+    flex-grow: 1;
+}
+
+.food-info .food-name {
+    color: #333;
+    font-size: 15px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin-bottom: 10px;
 }
 
 .food-price-and-quantity {
@@ -88,15 +109,10 @@
     margin: 15px 0;
 }
 
-.food-info .food-name {
-    color: #333;
-    font-size: 15px;    
-}
-
 .button-food-card {
     display: flex;
     justify-content: space-between;
-    gap:5px
+    gap: 5px;
 }
 
 .bt-add-to-cart, .bt-buy-now {
@@ -125,18 +141,18 @@
 
 @media (max-width: 376px) {
     .food-page-container {
-        flex-direction: column; /* Đảm bảo mọi thứ đều nằm dọc */
+        flex-direction: column;
     }
 
     .category-section {
         flex: 1;
-        flex-direction: row; /* Chuyển category thành ngang */
-        overflow-x: auto; /* Thêm thanh cuộn ngang nếu cần */
-        white-space: nowrap; /* Giữ cho các category không bị ngắt dòng */
+        flex-direction: row;
+        overflow-x: auto;
+        white-space: nowrap;
     }
 
     .category-list li {
-        display: inline-block; /* Chuyển li thành inline-block để nằm trên cùng một hàng */
-        margin-right: 10px; /* Thêm khoảng cách giữa các category */
+        display: inline-block;
+        margin-right: 10px;
     }
 }
