--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,9 +4,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(5px); /* Mờ nền */
-  background-color: rgba(0, 0, 0, 0.4); /* Overlay màu tối */
-  z-index: 999; /* Lớp trên cùng, thấp hơn navbar */
+  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
 }
 
 .navbar {
