--- a/src/page/blog/Blog.css
+++ b/src/page/blog/Blog.css
@@ -23,10 +23,28 @@
   outline: none;
 }
 
-.saved-items {
-  font-size: 16px;
+.saved-items button {
+  padding: 5px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid white;
+  background-color: #3d4446;
+  color: white;
+  font-weight: 300;
+  font-size: 0.9em;
 }
 
+.saved-items button:hover {
+  border: 1px solid white;
+  background-color: white;
+  color: #333;
+}
+
+.saved-items button:active {
+  border: 1px solid white;
+  background-color: #3d4446;
+  color: white;
+}
 .post-content button {
     border-radius: none;
 }
