--- a/src/page/blog_detail/BlogDetail.css
+++ b/src/page/blog_detail/BlogDetail.css
@@ -46,6 +46,39 @@ body {
   text-align: center;
 }
 
+.bookmark-container {
+  position: relative;
+}
+
+.bookmark-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 8px;
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.bookmark-icon:hover {
+  background-color: #333;
+  color: white;
+}
+
+.bookmark-icon.active {
+  background-color: #333;
+  color: white;
+}
+
+.fa-bookmark {
+  width: 25px;
+  height: 25px;
+}
+
 .blog-image {
   width: 100%;
   height: 380px;
@@ -68,11 +101,6 @@ body {
 .ic_back {
   width: 25px;
   height: 25px;
-}
-
-.blog-info {
-  background-color: #f9f9f9;
-  border-radius: 8px;
 }
 
 .tags .tag {
@@ -101,10 +129,12 @@ body {
 }
 .blog-content h1 {
   font-size: 1.7em;
+  font-weight: 700;
 }
 
 .blog-content h2 {
   margin-top: 15px;
+  font-weight: 700;
 }
 
 .blog-content h1,
