--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -20,8 +20,7 @@
 }
 
 .category-section {
-    max-width: 200px;
-    padding: 20px;
+    max-width: 200px;    
     height: 100vh;
     overflow-y: auto;
 }
@@ -69,28 +68,34 @@
     text-align: center;
     background-color: #fff;
     box-sizing: border-box;
-    height: 300px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.food-card img {
+.food-item-img-container {
     width: 100%;
-    height: 150px;
-    object-fit: contain;
-    padding: 0 5px;
+    height: 170px;
+    border-radius: 15px;
+    cursor: pointer;
+  }
+
+  .food-item-img-container .food-item-image {
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    border-radius: 20px;
+    object-fit: fill;
     transition: transform 0.3s ease-in-out;
     display: block;
-    cursor: pointer;
-}
+  }
 
-.food-card:hover img {
-    transform: scale(1.1);
-}
+  .food-item-img-container:hover img {
+    transform: scale(1.07);
+  }  
 
 .food-info {
-    padding: 10px;
     text-align: start;
     flex-grow: 1;
 }
@@ -111,14 +116,15 @@
 
 .button-food-card {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
     gap: 5px;
 }
 
 .bt-add-to-cart, .bt-buy-now {
     font-size: 10px;
     color: #888;
-    padding: 5px 5px;
+    padding: 5px 12px;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
