--- a/src/page/order/Order.css
+++ b/src/page/order/Order.css
@@ -233,3 +233,38 @@
 .total-amount-price {
   color: rgb(255, 23, 23);
 }
+
+.button-buy {
+  padding: 5px 20px;
+  margin: 5px;
+  border: none;
+  background-color: rgb(38, 174, 0);
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.button-buy:hover {
+  background-color: rgb(31, 142, 0);
+}
+
+.popup-order {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(108, 106, 106, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content-order {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 500px;
+  text-align: center;
+}
