--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -84,15 +84,15 @@
   .food-item-img-container .food-item-image {
     width: 100%;
     height: 100%;
-    padding: 15px;
+    padding: 10px;
     border-radius: 20px;
     object-fit: fill;
-    transition: transform 0.3s ease-in-out;
+    transition: 0.6s;
     display: block;
   }
 
   .food-item-img-container:hover img {
-    transform: scale(1.07);
+    transform: scale(1.05);
   }  
 
 .food-info {
