--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -6,6 +6,7 @@
   box-shadow: 0px 0px 10px #00000015;
   transition: 0.3s;
   animation: fadeIn 1s;
+  background-color: white;
 }
 
 p {
@@ -77,7 +78,6 @@ p {
 }
 
 .button-in-item button {
-  background-color: tomato;
   border: 1px solid rgb(255, 255, 255);
   padding: 5px 15px;
   color: white;
@@ -95,6 +95,14 @@ p {
 .button-in-item .button-addtocart,
 .button-in-item .button-buynow {
   cursor: pointer;
+}
+
+.button-in-item .button-addtocart {
+  background-color: #4caf50;
+}
+
+.button-in-item .button-buynow {
+  background-color: tomato;
 }
 
 a {
