--- a/src/components/food_display/FoodDisplay.css
+++ b/src/components/food_display/FoodDisplay.css
@@ -14,3 +14,15 @@
     gap: 30px;
     row-gap: 30px;
 }
+
+@media (max-width:376px) {
+    .food-display h2 {
+        font-size: 0.7em;
+        margin-top: -28px;
+    } 
+    .food-display-list {
+        margin-top: 15px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+    }
+}
