--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -124,3 +124,35 @@ a {
   color: red;
   font-weight: bold;
 }
+
+@media (max-width:376px) {
+  .food-item {
+    width: 95%;
+    height: 175px;
+    border-radius: 5px;
+    padding: 0px;
+  }
+  .food-item .food-item-img-container {
+    width: 100%;
+    height: 100px;
+    border-radius: 5px;
+  }
+  .food-item .food-item-img-container .food-item-image {
+    padding: 0px;
+    border-radius: 5px;
+  }
+  .food-item-name p {
+    font-size: 0.7em;
+  }
+  .food-item-info .food-item-price {
+    margin-top: -20px;
+    font-size: 0.75em;
+  }
+  .food-item-info .food-item-quantity {
+    margin-top: 0px !important;
+    font-size: 0.6em;
+  }
+  .food-item button {
+    display: none;
+  }
+}
