--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -164,3 +164,52 @@
     text-align: center;
   }
 }
+
+@media (max-width: 376px) {
+  .footer {
+    margin-top: 15px;
+  }
+  .footer-content {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .footer .img-logo-footer {
+    width: 50px;
+    height: 50px;
+  }
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 0.7em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .footer-content-right ul {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.5em;
+  }
+  .footer-content-right li {
+    font-size: 0.5em;
+  }
+  .facebook, .tiktok, .youtube {
+    width: 15px;
+    height: 15px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
+  }
+}
