--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -45,6 +45,19 @@
 
 @media (max-width:376px) {
     .header {
-        height: 50vw; /* Increase height as per necessity */
+        height: 40vw;
+    }
+
+    .header h2 {
+        font-size: 0.9em;
+    }
+
+    .header p {
+        font-size: 0.5em;
+    }
+
+    .header button {
+        padding: 2px 10px;
+        font-size: 0.5em;
     }
 }
