--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body {
     overflow-x: hidden;
 }
 
+@media (max-width: 376px) {
+    body {
+        padding-top: 61px;
+    }
+}
+
 a {
     text-decoration: none;
     color: inherit;
